--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Edition Template
+title: Ling's Blog
 url: "https://long-pig.cloudvent.net"
 baseurl:
 google_analytics_key:
@@ -11,11 +11,11 @@ show_full_navigation: true
 logo: /siteicon.png
 description: Product documentation template for Jekyll.
 author:
-  name:
-  email:
+  name:Ling
+  email:eywaLing@163.com
   twitter: # twitter username without the @ symbol
 social:
-  name: Edition Template
+  name: Ling's Blog
   links:
     - https://github.com/CloudCannon/edition-jekyll-template
 
